fixed scrollbar

--- a/frontend/src/routes/Main/style.scss
+++ b/frontend/src/routes/Main/style.scss
@@ -4,9 +4,8 @@
   height: 6px;
 }
 
-/* Track */
 ::-webkit-scrollbar-track {
-  background: #212833;
+  background-color: #e9e9e9;
 }
 
 /* Handle */
